--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -28,13 +28,22 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   flutter:
     sdk: flutter
 
-
+  google_fonts: ^6.2.1
+  smooth_page_indicator: ^1.2.0+3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  shared_preferences: ^2.5.2
+  get_it: ^8.0.3
+  intl: ^0.19.0
+  date_picker_timeline: ^1.2.6
+  flutter_screenutil: ^5.9.3
+  flutter_bloc: ^9.0.0
+  
 
 dev_dependencies:
   flutter_test:
