--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   date_picker_timeline: ^1.2.6
   flutter_screenutil: ^5.9.3
   flutter_bloc: ^9.0.0
+  fluttertoast: ^8.2.12
+  sqflite: ^2.4.1
   
 
 dev_dependencies:
